<resources>
    <string name="app_name">Chat Dev-intensive</string>
    <string name="profile_label_rating">Рейтинг</string>
    <string name="profile_label_respect">Уважение</string>
    <string name="profile_hint_repository">Репозиторий</string>
    <string name="profile_hint_about">О себе</string>
    <string name="profile_hint_last_name">Фамилия</string>
    <string name="profile_hint_first_name">Имя</string>
    <string name="cd_user_avatar_img">user avatar image</string>
    <string name="cd_button_dn_image">button day/night</string>
    <string name="cd_btn_edit_img">button edit</string>
    <string name="default_rating_value">0</string>
    <string name="default_respect_value">0</string>
    <string name="cd_icon_avatar">avatar icon</string>
    <string name="cd_icon_about">about icon</string>
    <string name="cd_icon_repo">repo icon</string>
    <string name="cd_icon_eye">eye icon</string>
    <string name="menu_search_title">Поиск</string>
</resources>
