<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileActivity"
    android:id="@+id/linearLayout"
    android:background="?attr/colorBackgroundFloating">

    <ru.skillbranch.devintensive.ui.custom.AspectRatioImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/profile_bg"
        android:scaleType="centerCrop"
        app:aspectRatio="1.78"
        android:id="@+id/aspectRatioImageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"/>
    <ru.skillbranch.devintensive.ui.custom.CircleImageView
        android:layout_width="@dimen/avatar_round_size"
        android:layout_height="@dimen/avatar_round_size"
        android:src="@drawable/avatar_default"
        android:id="@+id/iv_avatar"
        app:layout_constraintStart_toStartOf="@+id/aspectRatioImageView"
        app:layout_constraintEnd_toEndOf="@+id/aspectRatioImageView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintBottom_toTopOf="@+id/tv_nick_name"
        android:layout_marginTop="245dp"
        app:layout_constraintTop_toTopOf="@+id/aspectRatioImageView"
        android:contentDescription="@string/cd_user_avatar_img"/>
    <ImageButton
        android:layout_width="@dimen/btn_round_size_40"
        android:layout_height="@dimen/btn_round_size_40"
        app:srcCompat="@drawable/ic_switch_day_night"
        android:id="@+id/btn_switch_theme"
        android:background="@drawable/btn_round_bg"
        app:layout_constraintTop_toTopOf="@+id/iv_avatar"
        app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
        app:layout_constraintEnd_toStartOf="@+id/iv_avatar"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/cd_button_dn_image"/>
    <ImageButton
        android:layout_width="@dimen/btn_round_size_40"
        android:layout_height="@dimen/btn_round_size_40"
        app:srcCompat="@drawable/ic_edit_black_24dp"
        android:id="@+id/btn_edit"
        android:background="@drawable/btn_round_bg"
        app:layout_constraintTop_toTopOf="@+id/iv_avatar"
        app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
        app:layout_constraintStart_toEndOf="@+id/iv_avatar"
        android:layout_marginStart="32dp"
        android:contentDescription="@string/cd_btn_edit_img"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_nick_name"
        style="@style/Profile.Header.Nickname"
        app:layout_constraintTop_toBottomOf="@+id/iv_avatar"
        app:layout_constraintEnd_toEndOf="@+id/iv_avatar"
        app:layout_constraintStart_toStartOf="@+id/iv_avatar"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintBottom_toTopOf="@+id/tv_rank"
        tools:text="John Doe"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_rank"
        style="@style/Profile.Header.Rank"
        app:layout_constraintEnd_toEndOf="@+id/tv_nick_name"
        app:layout_constraintStart_toStartOf="@+id/tv_nick_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_nick_name"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintBottom_toTopOf="@+id/aspectRatioImageView"
        tools:text="Junior Android Developer"/>
    <View
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:id="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/aspectRatioImageView"
        android:background="?attr/colorAccentedSurface"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"/>
    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:id="@+id/divider"
        android:background="?attr/colorDivider"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"/>
    <TextView
        android:text="@string/default_rating_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_sp_24"
        android:id="@+id/tv_rating"
        style="@style/Profile.Metrics.Value"
        app:layout_constraintBottom_toTopOf="@+id/tv_rating_label"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintEnd_toStartOf="@+id/divider"
        app:layout_constraintTop_toTopOf="@+id/view"/>
    <TextView
        android:text="@string/profile_label_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_rating_label"
        style="@style/Profile.Metrics.Label"
        app:layout_constraintTop_toBottomOf="@+id/tv_rating"
        app:layout_constraintEnd_toEndOf="@+id/tv_rating"
        app:layout_constraintStart_toStartOf="@+id/tv_rating"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintBottom_toBottomOf="@+id/view"/>
    <TextView
        android:text="@string/default_respect_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_respect_24"
        android:id="@+id/tv_respect"
        style="@style/Profile.Metrics.Value"
        app:layout_constraintBottom_toTopOf="@+id/tv_respect_label"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintTop_toTopOf="@+id/view"/>
    <TextView
        android:text="@string/profile_label_respect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_respect_label"
        style="@style/Profile.Metrics.Label"
        app:layout_constraintTop_toBottomOf="@+id/tv_respect"
        app:layout_constraintEnd_toEndOf="@+id/tv_respect"
        app:layout_constraintStart_toStartOf="@+id/tv_respect"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintBottom_toBottomOf="@+id/view"/>



    <ImageView

        android:layout_width="@dimen/btn_round_size_40"
        android:layout_height="@dimen/btn_round_size_40"
        app:srcCompat="@drawable/ic_avatar"
        android:id="@+id/iv_icon_avatar"
        app:layout_constraintTop_toBottomOf="@+id/view"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/cd_icon_avatar"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/iv_icon_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="@+id/iv_icon_avatar"
        app:layout_constraintHorizontal_bias="0.0"
        android:id="@+id/textInputLayout" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_hint_first_name" style="@style/Profile.EditText.Single"
            tools:text="John"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        android:id="@+id/textInputLayout2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_hint_last_name"
            style="@style/Profile.EditText.Single"
            tools:text="Doe"/>
    </com.google.android.material.textfield.TextInputLayout>
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:id="@+id/view4"
        android:background="?attr/colorDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        android:layout_marginTop="5dp"/>
    <ImageView
        android:layout_width="@dimen/btn_round_size_40"
        android:layout_height="@dimen/btn_round_size_40"
        app:srcCompat="@drawable/ic_about"
        android:id="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/view4"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" android:contentDescription="@string/cd_icon_about"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wr_about"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:counterEnabled="false"
        app:counterMaxLength="128"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_hint_about" style="@style/Profile.EditText.MultiLine"

            tools:text="About me"/>
    </com.google.android.material.textfield.TextInputLayout>
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:id="@+id/view5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="?attr/colorDivider"
        app:layout_constraintTop_toBottomOf="@+id/wr_about"
        android:layout_marginTop="5dp"/>
    <ImageView
        android:layout_width="@dimen/btn_round_size_40"
        android:layout_height="@dimen/btn_round_size_40"
        app:srcCompat="@drawable/ic_repo"
        android:id="@+id/imageView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view5"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/cd_icon_repo"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:id="@+id/wr_repository"
        app:layout_constraintEnd_toStartOf="@+id/ic_eye"
        app:layout_constraintHorizontal_bias="0.5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_repository"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_hint_repository"
            style="@style/Profile.EditText.Single"
            tools:text="https://github.com/jdoe"/>
    </com.google.android.material.textfield.TextInputLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_eye_24dp"
        android:id="@+id/ic_eye"
        app:layout_constraintTop_toTopOf="@+id/wr_repository"
        app:layout_constraintBottom_toBottomOf="@+id/wr_repository"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toEndOf="@+id/wr_repository"
        app:layout_constraintHorizontal_bias="0.5"
        android:contentDescription="@string/cd_icon_eye"/>


</androidx.constraintlayout.widget.ConstraintLayout>